# source

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets_VS2022.json  Credits.cpp  GameInitOptionsScreen.cpp  GameSettings.cpp  GameVersion.cpp  HelpScreen.cpp  JA2 Splash.cpp  Language Defines.cpp  Language Defines.h  MPChatScreen.cpp  MPHostScreen.cpp  MPJoinScreen.cpp  MPScoreScreen.cpp  MainMenuScreen.cpp  README.md  SaveLoadGame.cpp  SaveLoadScreen.cpp  Screens.cpp  Sys Globals.cpp  XML_DifficultySettings.cpp  XML_IntroFiles.cpp  aniviewscreen.cpp  gameloop.cpp  gamescreen.cpp  ja2_VS2005.vcproj  ja2_VS2008.vcproj  ja2_VS2010.vcxproj  ja2_VS2010.vcxproj.filters  ja2_VS2013.vcxproj  ja2_VS2013.vcxproj.filters  ja2_VS2017.vcxproj  ja2_VS2019.vcxproj  jascreens.cpp  ub_config.cpp
Editor/: Button Defines.h  CMakeLists.txt  Cursor Modes.cpp  Cursor Modes.h  Editor Callback Prototypes.h  Editor Callbacks.cpp  Editor Modes.cpp  Editor Modes.h  Editor Taskbar Creation.cpp  Editor Taskbar Creation.h  Editor Taskbar Utils.cpp  Editor Taskbar Utils.h  Editor Undo.cpp  Editor Undo.h  EditorBuildings.cpp  EditorBuildings.h  EditorDefines.h  EditorItems.cpp  EditorItems.h  EditorMapInfo.cpp  EditorMapInfo.h  EditorMercs.cpp  EditorMercs.h  EditorTerrain.cpp  EditorTerrain.h  Editor_VS2005.vcproj  Editor_VS2008.vcproj  Editor_VS2010.vcxproj  Editor_VS2010.vcxproj.filters  Editor_VS2013.vcxproj  Editor_VS2017.vcxproj  Editor_VS2019.vcxproj  Item Statistics.cpp  Item Statistics.h  LoadScreen.cpp  LoadScreen.h  Road Smoothing.cpp  Road Smoothing.h  Sector Summary.cpp  Sector Summary.h  (+20 more)
Laptop/: AimArchives.cpp  AimHistory.cpp  AimLinks.cpp  AimMembers.cpp  AimPolicies.cpp  AimSort.cpp  BobbyR.cpp  BobbyRAmmo.cpp  BobbyRArmour.cpp  BobbyRGuns.cpp  BobbyRMailOrder.cpp  BobbyRMisc.cpp  BobbyRShipments.cpp  BobbyRUsed.cpp  BriefingRoom.cpp  BriefingRoomM.cpp  BriefingRoom_Data.cpp  BrokenLink.cpp  CMakeLists.txt  CampaignHistoryMain.cpp  CampaignHistory_Summary.cpp  CharProfile.cpp  Encyclopedia_Data_new.cpp  Encyclopedia_new.cpp  FacilityProduction.cpp  IMP AboutUs.cpp  IMP Attribute Entrance.cpp  IMP Attribute Finish.cpp  IMP Attribute Selection.cpp  IMP Background.cpp  IMP Begin Screen.cpp  IMP Character Trait.cpp  IMP Character and Disability Entrance.cpp  IMP Color Choosing.cpp  IMP Compile Character.cpp  IMP Confirm.cpp  IMP Disability Trait.cpp  IMP Finish.cpp  IMP Gear Entrance.cpp  IMP Gear.cpp  (+59 more)
ModularizedTacticalAI/: CMakeLists.txt
Standard Gaming Platform/: Button Sound Control.cpp  Button System.cpp  CMakeLists.txt  Cursor Control.cpp  DEBUG.cpp  DirectX Common.cpp  English.cpp  Font.cpp  Install.cpp  LibraryDataBase.cpp  MemMan.cpp  PCX.cpp  RegInst.cpp  SGP_VS2005.vcproj  SGP_VS2008.vcproj  SGP_VS2010.vcxproj  SGP_VS2010.vcxproj.filters  SGP_VS2013.vcxproj  SGP_VS2017.vcxproj  SGP_VS2019.vcxproj  SGP_VS2019.vcxproj.filters  STCI.cpp  himage.cpp  impTGA.cpp  input.cpp  line.cpp  mousesystem.cpp  sgp.cpp  sgp.h  shading.cpp  soundman.cpp  timer.cpp  vobject.cpp  vobject_blitters.cpp  vsurface.cpp
Strategic/: AI Viewer.cpp  ASD.cpp  Assignments.cpp  Auto Resolve.cpp  CMakeLists.txt  Campaign Init.cpp  Creature Spreading.cpp  Facilities.cpp  Game Clock.cpp  Game Event Hook.cpp  Game Events.cpp  Game Init.cpp  Hourly Update.cpp  Ja25 Strategic Ai.cpp  LuaInitNPCs.cpp  Luaglobal.cpp  Map Screen Helicopter.cpp  Map Screen Interface Border.cpp  Map Screen Interface Bottom.cpp  Map Screen Interface Map Inventory.cpp  Map Screen Interface Map.cpp  Map Screen Interface TownMine Info.cpp  Map Screen Interface.cpp  MapScreen Quotes.cpp  Meanwhile.cpp  Merc Contract.cpp  MilitiaSquads.cpp  MiniEvents.cpp  Player Command.cpp  PreBattle Interface.cpp  Queen Command.cpp  Quest Debug System.cpp  Quests.cpp  Rebel Command.cpp  Reinforcement.cpp  Scheduling.cpp  Strategic AI.cpp  Strategic Event Handler.cpp  Strategic Merc Handler.cpp  Strategic Mines.cpp  (+29 more)
Tactical/: Air Raid.cpp  Animation Cache.cpp  Animation Control.cpp  Animation Data.cpp  Arms Dealer Init.cpp  ArmsDealerInvInit.cpp  Auto Bandage.cpp  Boxing.cpp  CMakeLists.txt  Campaign.cpp  Civ Quotes.cpp  Dialogue Control.cpp  DisplayCover.cpp  Drugs And Alcohol.cpp  End Game.cpp  Enemy Soldier Save.cpp  EnemyItemDrops.cpp  Faces.cpp  Food.cpp  GAP.H  GAP.cpp  Handle Doors.cpp  Handle Items.cpp  Handle UI Plan.cpp  Handle UI.cpp  Interface Control.cpp  Interface Cursors.cpp  Interface Dialogue.cpp  Interface Enhanced.cpp  Interface Items.cpp  Interface Panels.cpp  Interface Utils.cpp  Interface.cpp  InterfaceItemImages.cpp  Inventory Choosing.cpp  Item Types.cpp  Items.cpp  Ja25_Tactical.cpp  Keys.cpp  LOS.cpp  (+111 more)
TacticalAI/: AIInternals.h  AIList.cpp  AIMain.cpp  AIUtils.cpp  Attacks.cpp  CMakeLists.txt  CreatureDecideAction.cpp  DecideAction.cpp  FindLocations.cpp  Knowledge.cpp  Medical.cpp  Movement.cpp  NPC.cpp  NPC.h  PanicButtons.cpp  QuestDebug.cpp  Realtime.cpp  TacticalAI_VS2005.vcproj  TacticalAI_VS2008.vcproj  TacticalAI_VS2010.vcxproj  TacticalAI_VS2010.vcxproj.filters  TacticalAI_VS2013.vcxproj  TacticalAI_VS2017.vcxproj  TacticalAI_VS2019.vcxproj  ZombieDecideAction.cpp
TileEngine/: Ambient Control.cpp  Buildings.cpp  CMakeLists.txt  Exit Grids.cpp  Explosion Control.cpp  Fog Of War.cpp  Interactive Tiles.cpp  Isometric Utils.cpp  LightEffects.cpp  Map Edgepoints.cpp  Radar Screen.cpp  Render Dirty.cpp  Render Fun.cpp  SaveLoadMap.cpp  Shade Table Util.cpp  Simple Render Utils.cpp  Smell.cpp  SmokeEffects.cpp  Tactical Placement GUI.cpp  Tile Animation.cpp  Tile Cache.cpp  Tile Surface.cpp  TileDat.cpp  TileEngine_VS2005.vcproj  TileEngine_VS2008.vcproj  TileEngine_VS2010.vcxproj  TileEngine_VS2013.vcxproj  TileEngine_VS2013.vcxproj.filters  TileEngine_VS2017.vcxproj  TileEngine_VS2019.vcxproj  WorldDat.cpp  XML_ExplosionData.cpp  XML_StructureData.hpp  environment.cpp  lighting.cpp  overhead map.cpp  phys math.cpp  physics.cpp  pits.cpp  renderworld.cpp  (+5 more)
Utils/: Animated ProgressBar.cpp  CMakeLists.txt  Cinematics Bink.cpp  Cinematics.cpp  Cinematics.h  Cursors.cpp  Debug Control.cpp  Encrypted File.cpp  (+57 more)
(+222 files in other folders)
