add_library(Editor INTERFACE)
target_sources(Editor INTERFACE
"Cursor Modes.cpp"
"Editor Callbacks.cpp"
"Editor Modes.cpp"
"Editor Taskbar Creation.cpp"
"Editor Taskbar Utils.cpp"
"Editor Undo.cpp"
"EditorBuildings.cpp"
"EditorItems.cpp"
"EditorMapInfo.cpp"
"EditorMercs.cpp"
"EditorTerrain.cpp"
"editscreen.cpp"
"edit_sys.cpp"
"Item Statistics.cpp"
"LoadScreen.cpp"
"messagebox.cpp"
"newsmooth.cpp"
"popupmenu.cpp"
"Road Smoothing.cpp"
"Sector Summary.cpp"
"selectwin.cpp"
"SmartMethod.cpp"
"smooth.cpp"
"Smoothing Utils.cpp"
"XML_ActionItems.cpp"
)
target_include_directories(Editor INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
