add_library(Laptop INTERFACE)
target_sources(Laptop INTERFACE
"aim.cpp"
"AimArchives.cpp"
"AimFacialIndex.cpp"
"AimHistory.cpp"
"AimLinks.cpp"
"AimMembers.cpp"
"AimPolicies.cpp"
"AimSort.cpp"
"BaseTable.cpp"
"BobbyR.cpp"
"BobbyRAmmo.cpp"
"BobbyRArmour.cpp"
"BobbyRGuns.cpp"
"BobbyRMailOrder.cpp"
"BobbyRMisc.cpp"
"BobbyRShipments.cpp"
"BobbyRUsed.cpp"
"BriefingRoom.cpp"
"BriefingRoomM.cpp"
"BriefingRoom_Data.cpp"
"BrokenLink.cpp"
"CampaignHistoryMain.cpp"
"CampaignHistory_Summary.cpp"
"CampaignStats.cpp"
"CharProfile.cpp"
"DropDown.cpp"
"DynamicDialogueWidget.cpp"
"email.cpp"
"Encyclopedia_Data_new.cpp"
"Encyclopedia_new.cpp"
"FacilityProduction.cpp"
"files.cpp"
"finances.cpp"
"florist Cards.cpp"
"florist Gallery.cpp"
"florist Order Form.cpp"
"florist.cpp"
"funeral.cpp"
"GunEmporium.cpp"
"history.cpp"
"IMP AboutUs.cpp"
"IMP Attribute Entrance.cpp"
"IMP Attribute Finish.cpp"
"IMP Attribute Selection.cpp"
"IMP Background.cpp"
"IMP Begin Screen.cpp"
"IMP Character and Disability Entrance.cpp"
"IMP Character Trait.cpp"
"IMP Color Choosing.cpp"
"IMP Compile Character.cpp"
"IMP Confirm.cpp"
"IMP Disability Trait.cpp"
"IMP Finish.cpp"
"IMP Gear Entrance.cpp"
"IMP Gear.cpp"
"IMP HomePage.cpp"
"IMP MainPage.cpp"
"IMP Minor Trait.cpp"
"IMP Personality Entrance.cpp"
"IMP Personality Finish.cpp"
"IMP Personality Quiz.cpp"
"IMP Portraits.cpp"
"IMP Prejudice.cpp"
"IMP Skill Trait.cpp"
"IMP Text System.cpp"
"IMP Voices.cpp"
"IMPVideoObjects.cpp"
"insurance Comments.cpp"
"insurance Contract.cpp"
"insurance Info.cpp"
"insurance.cpp"
"Intelmarket.cpp"
"laptop.cpp"
"merccompare.cpp"
"mercs Account.cpp"
"mercs Files.cpp"
"mercs No Account.cpp"
"mercs.cpp"
"MilitiaInterface.cpp"
"MilitiaWebsite.cpp"
"personnel.cpp"
"PMC.cpp"
"PostalService.cpp"
"sirtech.cpp"
"Store Inventory.cpp"
"WHO.cpp"
"XML_AIMAvailability.cpp"
"XML_BriefingRoom.cpp"
"XML_CampaignStatsEvents.cpp"
"XML_ConditionsForMercAvailability.cpp"
"XML_DeliveryMethods.cpp"
"XML_Email.cpp"
"XML_EmailMercAvailable.cpp"
"XML_EmailMercLevelUp.cpp"
"XML_History.cpp"
"XML_IMPPortraits.cpp"
"XML_IMPVoices.cpp"
"XML_OldAIMArchive.cpp"
"XML_ShippingDestinations.cpp"
)
target_include_directories(Laptop INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
