add_library(SGP INTERFACE)
target_sources(SGP INTERFACE
"Button Sound Control.cpp"
"Button System.cpp"
"Compression.cpp"
"Container.cpp"
"Cursor Control.cpp"
"DEBUG.cpp"
"debug_util.cpp"
"debug_win_util.cpp"
"DirectDraw Calls.cpp"
"DirectX Common.cpp"
"English.cpp"
"FileCat.cpp"
"FileMan.cpp"
"Flic.cpp"
"Font.cpp"
"himage.cpp"
"impTGA.cpp"
"input.cpp"
"Install.cpp"
"Ja2 Libs.cpp"
"LibraryDataBase.cpp"
"line.cpp"
"MemMan.cpp"
"mousesystem.cpp"
"PCX.cpp"
"PngLoader.cpp"
"Random.cpp"
"readdir.cpp"
"RegInst.cpp"
"sgp.cpp"
"sgp_logger.cpp"
"shading.cpp"
"soundman.cpp"
"STCI.cpp"
"stringicmp.cpp"
"timer.cpp"
"video.cpp"
"vobject.cpp"
"vobject_blitters.cpp"
"vsurface.cpp"
"WinFont.cpp"
)
target_include_directories(SGP INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(SGP INTERFACE
"ddraw.lib"
"${PROJECT_SOURCE_DIR}/fmodvc.lib"
)
target_link_libraries(SGP INTERFACE libpng)
