add_library(Strategic INTERFACE)
target_sources(Strategic INTERFACE
"AI Viewer.cpp"
"ASD.cpp"
"Assignments.cpp"
"Auto Resolve.cpp"
"Campaign Init.cpp"
"Creature Spreading.cpp"
"Facilities.cpp"
"Game Clock.cpp"
"Game Event Hook.cpp"
"Game Events.cpp"
"Game Init.cpp"
"Hourly Update.cpp"
"Ja25 Strategic Ai.cpp"
"Luaglobal.cpp"
"LuaInitNPCs.cpp"
"Map Screen Helicopter.cpp"
"Map Screen Interface Border.cpp"
"Map Screen Interface Bottom.cpp"
"Map Screen Interface Map Inventory.cpp"
"Map Screen Interface Map.cpp"
"Map Screen Interface TownMine Info.cpp"
"Map Screen Interface.cpp"
"MapScreen Quotes.cpp"
"mapscreen.cpp"
"Meanwhile.cpp"
"Merc Contract.cpp"
"MilitiaIndividual.cpp"
"MilitiaSquads.cpp"
"MiniEvents.cpp"
"Player Command.cpp"
"PreBattle Interface.cpp"
"Queen Command.cpp"
"Quest Debug System.cpp"
"Quests.cpp"
"Rebel Command.cpp"
"Reinforcement.cpp"
"Scheduling.cpp"
"Strategic AI.cpp"
"Strategic Event Handler.cpp"
"Strategic Merc Handler.cpp"
"Strategic Mines LUA.cpp"
"Strategic Mines.cpp"
"Strategic Movement Costs.cpp"
"Strategic Movement.cpp"
"Strategic Pathing.cpp"
"Strategic Status.cpp"
"Strategic Town Loyalty.cpp"
"strategic town reputation.cpp"
"Strategic Turns.cpp"
"strategic.cpp"
"strategicmap.cpp"
"Town Militia.cpp"
"UndergroundInit.cpp"
"XML_Army.cpp"
"XML_Bloodcats.cpp"
"XML_CoolnessBySector.cpp"
"XML_Creatures.cpp"
"XML_ExtraItems.cpp"
"XML_Facilities.cpp"
"XML_FacilityTypes.cpp"
"XML_Minerals.cpp"
"XML_SectorNames.cpp"
"XML_SquadNames.cpp"
"XML_UniformColors.cpp"
)
target_include_directories(Strategic INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
