add_library(Tactical INTERFACE)
target_sources(Tactical INTERFACE
"Air Raid.cpp"
"Animation Cache.cpp"
"Animation Control.cpp"
"Animation Data.cpp"
"Arms Dealer Init.cpp"
"ArmsDealerInvInit.cpp"
"Auto Bandage.cpp"
"Boxing.cpp"
"bullets.cpp"
"Campaign.cpp"
"Civ Quotes.cpp"
"Dialogue Control.cpp"
"Disease.cpp"
"DisplayCover.cpp"
"Drugs And Alcohol.cpp"
"DynamicDialogue.cpp"
"End Game.cpp"
"Enemy Soldier Save.cpp"
"EnemyItemDrops.cpp"
"Faces.cpp"
"Food.cpp"
"fov.cpp"
"GAP.cpp"
"Handle Doors.cpp"
"Handle Items.cpp"
"Handle UI Plan.cpp"
"Handle UI.cpp"
"Interface Control.cpp"
"Interface Cursors.cpp"
"Interface Dialogue.cpp"
"Interface Enhanced.cpp"
"Interface Items.cpp"
"Interface Panels.cpp"
"Interface Utils.cpp"
"Interface.cpp"
"InterfaceItemImages.cpp"
"Inventory Choosing.cpp"
"Item Types.cpp"
"Items.cpp"
"Ja25_Tactical.cpp"
"Keys.cpp"
"LogicalBodyTypes/AbstractXMLLoader.cpp"
"LogicalBodyTypes/BodyType.cpp"
"LogicalBodyTypes/BodyTypeDB.cpp"
"LogicalBodyTypes/EnumeratorDB.cpp"
"LogicalBodyTypes/Filter.cpp"
"LogicalBodyTypes/FilterDB.cpp"
"LogicalBodyTypes/Layers.cpp"
"LogicalBodyTypes/PaletteDB.cpp"
"LogicalBodyTypes/PaletteTable.cpp"
"LogicalBodyTypes/SurfaceCache.cpp"
"LogicalBodyTypes/SurfaceDB.cpp"
"LogicalBodyTypes/XMLParseException.cpp"
"LOS.cpp"
"Map Information.cpp"
"Merc Entering.cpp"
"Merc Hiring.cpp"
"Militia Control.cpp"
"Minigame.cpp"
"Morale.cpp"
"opplist.cpp"
"Overhead.cpp"
"PATHAI.cpp"
"Points.cpp"
"QARRAY.cpp"
"Rain.cpp"
"RandomMerc.cpp"
"Real Time Input.cpp"
"Rotting Corpses.cpp"
"ShopKeeper Interface.cpp"
"SkillCheck.cpp"
"SkillMenu.cpp"
"Soldier Add.cpp"
"Soldier Ani.cpp"
"Soldier Control.cpp"
"Soldier Create.cpp"
"Soldier Find.cpp"
"Soldier Init List.cpp"
"Soldier Profile.cpp"
"Soldier Tile.cpp"
"SoldierTooltips.cpp"
"Spread Burst.cpp"
"Squads.cpp"
"Strategic Exit GUI.cpp"
"Structure Wrap.cpp"
"Tactical Save.cpp"
"Tactical Turns.cpp"
"TeamTurns.cpp"
"Turn Based Input.cpp"
"UI Cursors.cpp"
"Vehicles.cpp"
"VehicleMenu.cpp"
"Weapons.cpp"
"World Items.cpp"
"XML_AmmoStrings.cpp"
"XML_AmmoTypes.cpp"
"XML_Armour.cpp"
"XML_AttachmentInfo.cpp"
"XML_Attachments.cpp"
"XML_AttachmentSlots.cpp"
"XML_Background.cpp"
"XML_BurstSounds.cpp"
"XML_CivGroupNames.cpp"
"XML_Clothes.cpp"
"XML_ComboMergeInfo.cpp"
"XML_CompatibleFaceItems.cpp"
"XML_Disease.cpp"
"XML_Drugs.cpp"
"XML_EnemyAmmoDrops.cpp"
"XML_EnemyArmourDrops.cpp"
"XML_EnemyExplosiveDrops.cpp"
"XML_EnemyItemChoice.cpp"
"XML_EnemyMiscDrops.cpp"
"XML_EnemyNames.cpp"
"XML_EnemyRank.cpp"
"XML_EnemyWeaponChoice.cpp"
"XML_EnemyWeaponDrops.cpp"
"XML_Explosive.cpp"
"XML_Food.cpp"
"XML_FoodOpinions.cpp"
"XML_HiddenNames.cpp"
"XML_IMPItemChoices.cpp"
"XML_IncompatibleAttachments.cpp"
"XML_InteractiveTiles.cpp"
"XML_ItemAdjustments.cpp"
"XML_Keys.cpp"
"XML_Launchable.cpp"
"XML_LBEPocket.cpp"
"XML_LBEPocketPopup.cpp"
"XML_LoadBearingEquipment.cpp"
"XML_LoadScreenHints.cpp"
"XML_Locks.cpp"
"XML_Magazine.cpp"
"XML_Merchants.cpp"
"XML_MercStartingGear.cpp"
"XML_Merge.cpp"
"XML_MilitiaIndividual.cpp"
"XML_NewFaceGear.cpp"
"XML_Opinions.cpp"
"XML_Profiles.cpp"
"XML_Qarray.cpp"
"XML_RandomItem.cpp"
"XML_RandomStats.cpp"
"XML_RPCFacesSmall.cpp"
"XML_SectorLoadscreens.cpp"
"XML_SoldierProfiles.cpp"
"XML_Sounds.cpp"
"XML_SpreadPatterns.cpp"
"XML_StructureConstruct.cpp"
"XML_StructureDeconstruct.cpp"
"XML_Structure_Move.cpp"
"XML_Taunts.cpp"
"XML_AdditionalTileProperties.cpp"
"XML_TonyInventory.cpp"
"XML_Vehicles.cpp"
)
target_include_directories(Tactical INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
