add_library(TileEngine INTERFACE)
target_sources(TileEngine INTERFACE
"Ambient Control.cpp"
"Buildings.cpp"
"environment.cpp"
"Exit Grids.cpp"
"Explosion Control.cpp"
"Fog Of War.cpp"
"Interactive Tiles.cpp"
"Isometric Utils.cpp"
"LightEffects.cpp"
"lighting.cpp"
"Map Edgepoints.cpp"
"overhead map.cpp"
"phys math.cpp"
"physics.cpp"
"pits.cpp"
"Radar Screen.cpp"
"Render Dirty.cpp"
"Render Fun.cpp"
"Render Z.cpp"
"renderworld.cpp"
"SaveLoadMap.cpp"
"Shade Table Util.cpp"
"Simple Render Utils.cpp"
"Smell.cpp"
"SmokeEffects.cpp"
"structure.cpp"
"sysutil.cpp"
"Tactical Placement GUI.cpp"
"Tile Animation.cpp"
"Tile Cache.cpp"
"Tile Surface.cpp"
"TileDat.cpp"
"tiledef.cpp"
"WorldDat.cpp"
"worlddef.cpp"
"worldman.cpp"
"XML_ExplosionData.cpp"
)
target_include_directories(TileEngine INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
