add_library(Utils INTERFACE)
target_sources(Utils INTERFACE
"Animated ProgressBar.cpp"
"Cinematics Bink.cpp"
"Cinematics.cpp"
"Cursors.cpp"
"Debug Control.cpp"
"dsutil.cpp"
"Encrypted File.cpp"
"Event Manager.cpp"
"Event Pump.cpp"
"ExportStrings.cpp"
"Font Control.cpp"
"ImportStrings.cpp"
"INIReader.cpp"
"KeyMap.cpp"
"LocalizedStrings.cpp"
"MapUtility.cpp"
"MercTextBox.cpp"
"message.cpp"
"Multi Language Graphic Utils.cpp"
"Multilingual Text Code Generator.cpp"
"Music Control.cpp"
"PopUpBox.cpp"
"popup_class.cpp"
"popup_definition.cpp"
"Quantize Wrap.cpp"
"Quantize.cpp"
"Slider.cpp"
"Sound Control.cpp"
"STIConvert.cpp"
"Text Input.cpp"
"Text Utils.cpp"
"Timer Control.cpp"
"Utilities.cpp"
"WordWrap.cpp"
"XMLProperties.cpp"
"XMLWriter.cpp"
"XML_Items.cpp"
"XML_Language.cpp"
"XML_SenderNameList.cpp"
"_ChineseText.cpp"
"_DutchText.cpp"
"_EnglishText.cpp"
"_FrenchText.cpp"
"_GermanText.cpp"
"_ItalianText.cpp"
"_Ja25ChineseText.cpp"
"_Ja25DutchText.cpp"
"_Ja25EnglishText.cpp"
"_Ja25FrenchText.cpp"
"_Ja25GermanText.cpp"
"_Ja25ItalianText.cpp"
"_Ja25PolishText.cpp"
"_Ja25RussianText.cpp"
"_PolishText.cpp"
"_RussianText.cpp"
)
target_include_directories(Utils INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
